<resources>
    <string name="google_key">AIzaSyCx2XM-jUdvo5cOSJWIBwcayQEL4MO9-OQ</string>
    <string name="facebook_app_id">890517214714148</string>
    <string name="app_name">Capsula</string>
    <string name="loading">Loading</string>
    <string name="try_again">Try again</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="no_internet_message">Oops , No Internet connection</string>
    <string name="skip"><u>Skip</u></string>
    <string name="welcome_to_capsula">Welcome To Capsula!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="please_enter_a_valid_name">Please enter a valid name</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="phone">Phone</string>
    <string name="please_enter_a_valid_phone">Please enter a valid phone</string>
    <string name="password">Password</string>
    <string name="please_enter_a_valid_password">Please enter a valid password</string>
    <string name="register_with_social">Or register with social media</string>
    <string name="name_should_be">Name should be at least 2 characters</string>
    <string name="password_should_be">Password should be at least 6 characters</string>
    <string name="phone_or_email">Phone or Email</string>
    <string name="please_enter_a_valid_data">Please enter a valid data</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with_social_media">Or login with social media</string>
    <string name="verification">Verification</string>
    <string name="enter_verification_code_that_was_sent_to_you_by_sms">Enter verification code that was sent\nto you by sms</string>
    <string name="submit">Submit</string>
    <string name="send_again"><u>Send Again ?</u></string>
    <string name="invalid_code">Invalid code</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="current_location">Current Location</string>
    <string name="add_address">Add Address</string>
    <string name="please_pick_an_address">Please pick an address</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="save">Save</string>
    <string name="forget_password_title">Forget Password</string>
    <string name="enter_your_phone_number_and_we_will_send_you_sms_to_reset_you_pasword">Enter your phone number and we will send\nyou sms to reset you password</string>
    <string name="send">Send</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset">Reset</string>
    <string name="password_not_match">Password doesn\'t match</string>
    <string name="password_has_changed">Password has been changed successfully</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="hello">Hello</string>
    <string name="what_are_you_looking_for">What are you looking for …</string>
    <string name="best_seller">Best Seller</string>
    <string name="top_rated">Top Rated</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="categories">Categories</string>
    <string name="see_all"><u>See All</u></string>
    <string name="brands">Brands</string>
    <string name="stores">Stores</string>
    <string name="rsd">SAR</string>
    <string name="search">Search</string>
    <string name="clear">Clear</string>
    <string name="apply">Apply</string>
    <string name="sort_by">Sort By</string>
    <string name="highest_price">Highest Price</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="nearby_location">Nearby Location</string>
    <string name="available_at">Available at</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="was">Was</string>
    <string name="offer">Offer</string>
    <string name="discount">Discount</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="details">Details</string>
    <string name="done">Done</string>
    <string name="clear_all">Clear All</string>
    <string name="next">Next</string>
    <string name="empty_cart_msg">The cart is empty, please add products to cart first</string>
    <string name="items">Items</string>
    <string name="total">Total</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="this_order_require_a_prescription">This Order requires a prescription</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="insurance_number">Insurance Number</string>
    <string name="preferred_payment_method">Preferred Payment Method</string>
    <string name="add_your_payment_method">Add your payment method</string>
    <string name="do_you_have_a_promo_code"><u>Do you have a promo code ?</u></string>
    <string name="cost_details">Payment Details</string>
    <string name="items_cost">Order Price</string>
    <string name="estimated_total">Estimated Total</string>
    <string name="delivery_cost">Delivery Fees</string>
    <string name="permission_denied_permanently">You refused to allow the application to use some applications, to reset go to settings</string>
    <string name="permission_denied">You refused to allow the app to use some apps</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_option">Choose Option</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="credit_card">Credit Card</string>
    <string name="google_pay">Google Pay</string>
    <string name="stc_pay">STC Pay</string>
    <string name="mada">Mada</string>
    <string name="payment_method">Payment Method</string>
    <string name="please_add_prescription">Please add prescription</string>
    <string name="please_add_your_payment_method">Please add your payment method</string>
    <string name="add_new_address"><u>Add New Address</u></string>
    <string name="thank_you_for_your_order">Thank you for your order</string>
    <string name="track_my_order"><u>Track My Order</u></string>
    <string name="personal_details">Personal Details</string>
    <string name="my_orders">My Orders</string>
    <string name="manage_payment_methods">Manage Payment Methods</string>
    <string name="help">Help</string>
    <string name="share_earn">Share and Earn</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="faqs">FAQs</string>
    <string name="about">About Capsula</string>
    <string name="logout">Logout</string>
    <string name="order_date">Order Date</string>
    <string name="total_price">Total Price</string>
    <string name="more_details"><u>More Details</u></string>
    <string name="pending">Pending</string>
    <string name="cancelled">Cancelled</string>
    <string name="rejected">Rejected</string>
    <string name="approved">Approved</string>
    <string name="shipped">Shipped</string>
    <string name="delivered">Delivered</string>
    <string name="order_details">Order Details</string>
    <string name="track_order"><u>Track Order</u></string>
    <string name="documents">Documents</string>
    <string name="prescription">Prescription</string>
    <string name="products_details">Item Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="reorder">Reorder</string>
    <string name="vat">VAT</string>
    <string name="pieces">Pieces</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="estimated_date">Order Date</string>
    <string name="estimated_time">Order Time</string>
    <string name="order_is">Order is</string>
    <string name="delivery_representative">Delivery Representative</string>
    <string name="customer">Customer</string>
    <string name="personal_photo">Personal Photo</string>
    <string name="full_name">Full name</string>
    <string name="please_enter_valid_full_name">Please enter valid full name</string>
    <string name="citizenship">Citizenship</string>
    <string name="please_choose_your_citizenship">Please choose your citizenship</string>
    <string name="nationalid">National ID</string>
    <string name="please_enter_valid_national_id">Please enter valid national ID</string>
    <string name="bank_account">Bank Account</string>
    <string name="optional">( Optional )</string>
    <string name="full_address">Full Address</string>
    <string name="please_pick_a_personal_photo">Please pick a personal photo</string>
    <string name="car_details">Car Details</string>
    <string name="car_brand">Car Brand</string>
    <string name="please_choose_car_brand">Please choose car brand</string>
    <string name="car_model">Car Model</string>
    <string name="please_choose_car_model">Please choose car model</string>
    <string name="model_year">Model Year</string>
    <string name="please_choose_model_year">Please choose model year</string>
    <string name="license_type">License Type</string>
    <string name="please_choose_license_type">Please choose license type</string>
    <string name="vehicle_plate_details">Vehicle Plate Details</string>
    <string name="plate_number">Plate Number</string>
    <string name="plate_letters">Plate Letters</string>
    <string name="please_enter_vehicle_plate_details">Please enter valid vehicle plate details</string>
    <string name="choose_car_brand_first">Please choose car brand first</string>
    <string name="required_documents">Required Documents</string>
    <string name="car_licence">Car Licence</string>
    <string name="please_pick_this_photo">Please pick this photo</string>
    <string name="car_front_image">Car Front Image</string>
    <string name="car_back_image">Car Back Image</string>
    <string name="car_registration">Car Registration</string>
    <string name="i_agree_on">I agree on</string>
    <string name="terms_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="terms_conditions_title">Terms &amp; Conditions</string>
    <string name="please_agree_on_terms_and_conditions">Please agree on terms and conditions</string>
    <string name="my_orders_list">My Orders List</string>
    <string name="order_id">Order ID:</string>
    <string name="order_in_progress">Order In Progress</string>
    <string name="order_to">Order to</string>
    <string name="start_delivery">Start Delivery</string>
    <string name="finish_delivery">Finish Delivery</string>
    <string name="navigate">Navigate</string>
    <string name="history">History</string>
    <string name="my_wallet">My Wallet</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="change_lang">Change Language</string>
    <string name="new_order">New Order</string>
    <string name="your_cart_contains">Your cart contains items from</string>
    <string name="do_u_wish">\n.Do you wish to clear your cart and start a new order here?</string>
    <string name="proceed_online_payment">Total Cost is great than 500 RSD, so you have to proceed with online payment</string>
    <string name="checkout_layout_text_pay">Pay Now</string>
    <string name="checkout_layout_text_register">Register</string>
    <string name="km">KM</string>
    <string name="store_distance">Distance:</string>
    <string name="the_total_number_of_completed_orders">The total number of completed orders</string>
    <string name="total_delivery_fee_in_cash">Total cash delivery cost</string>
    <string name="total_online_delivery_fee">Total online delivery cost</string>
</resources>