<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.blueMarketing.capsula.ui.deliveryMan.deliveryAuthentication.fragments.deliveryLogin.DeliveryLoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_24"
                android:text="@string/phone_or_email"
                android:textColor="@color/colorLabelText"
                android:textSize="@dimen/font_16" />

            <EditText
                style="@style/medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_24"
                android:textAlignment="viewStart"
                android:background="@drawable/field_rounded_bg"
                android:inputType="text"
                android:paddingStart="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_16"
                android:text="@={vm.phoneOrEmailText}"
                android:textColor="@color/colorLabelText"
                android:textSize="@dimen/font_14"
                tools:text="sherif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginEnd="@dimen/dimen_24"
                android:text="@string/please_enter_a_valid_data"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/font_12"
                android:visibility="@{vm.phoneOrEmailError?View.VISIBLE:View.GONE}" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_16"
                android:text="@string/password"
                android:textColor="@color/colorLabelText"
                android:textSize="@dimen/font_16" />

            <EditText
                style="@style/medium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginStart="@dimen/dimen_24"
                android:layout_marginTop="@dimen/dimen_8"
                android:layout_marginEnd="@dimen/dimen_24"
                android:background="@drawable/field_rounded_bg"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:paddingStart="@dimen/dimen_16"
                android:paddingEnd="@dimen/dimen_16"
                android:text="@={vm.passwordText}"
                android:textColor="@color/colorLabelText"
                android:textSize="@dimen/font_14"
                tools:text="sherif@test.com" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_5"
                android:layout_marginEnd="@dimen/dimen_24"
                android:text="@string/please_enter_a_valid_password"
                android:textColor="@android:color/holo_red_light"
                android:textSize="@dimen/font_12"
                android:visibility="@{vm.passwordError?View.VISIBLE:View.GONE}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_10"
                android:onClick="@{()->vm.onForgetPasswordClick()}"
                android:padding="@dimen/dimen_5"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/font_14" />

            <Button
                style="@style/bold"
                android:layout_width="180dp"
                android:layout_height="@dimen/dimen_65"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen_30"
                android:background="@drawable/button_rounded_bg"
                android:onClick="@{()->vm.onLoginButtonClick()}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_16" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="@{vm.isLoading?View.VISIBLE:View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>